# equilibrium

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/actions/setup-equilibrium/: README.md  action.yml
.github/workflows/: ci.yml
docs/: USAGE.md
equilibrium-d/: README.md  equilibrium.d
equilibrium-nim/: README.md  equilibrium.nim
equilibrium-rust/: Cargo.toml  README.md
equilibrium-rust/src/: lib.rs
equilibrium-zig/: README.md  equilibrium.zig
examples/: README.md  using_equilibrium.rs
examples/c-ffi/: README.md  build.sh  mathlib.c  mathlib.h
examples/demo-app/: Cargo.toml  README.md  build.rs
examples/demo-app/foreign-code/: math.c  math.h
examples/demo-app/src/: main.rs
examples/embedded-stm32/: Cargo.toml  build.rs
examples/embedded-stm32/src/: main.rs
examples/embedded-stm32/stm32-libs/cmsis/: core_cm4.h
examples/embedded-stm32/stm32-libs/drivers/: my_sensor.h
examples/embedded-stm32/stm32-libs/hal/: stm32f4xx_hal_gpio.h  stm32f4xx_hal_uart.h
examples/full-demo/: Cargo.toml  README.md  build.rs
examples/full-demo/foreign-code/: calculator.c  calculator.h
examples/full-demo/src/: main.rs
examples/polyglot-gui/: BUILD_WINDOWS.md  Cargo.toml  build.rs  dashboard.html
examples/polyglot-gui/foreign-code/: c_module.c  c_module.h  cpp_module.cpp  cpp_module.h  csharp_module.cs  d_module.d  hare_module.ha  nim_module.nim  odin_module.odin  rust_module.rs  v_module.v  v_module_shim.c  zig_module.zig
examples/polyglot-gui/src/: main.rs  polyglot.rs  tui.rs
examples/polyglot-gui/templates/: dashboard.crepus  polyglot.crepus
examples/rust-ffi/: Cargo.toml  README.md
examples/rust-ffi/src/: lib.rs
src/: bindings.rs  compiler.rs  detector.rs  lib.rs  loader.rs  scanner.rs
