[package]
name = "equilibrium"
version = "0.1.0"
edition = "2021"
description = "Automatic C FFI generation for C-compiling languages (V, Zig, C++, C#, Rust, D, Nim, Odin)"
license = "MIT"
repository = "https://github.com/semitechnological/equilibrium"

[dependencies]
which = "6"
clap = { version = "4", features = ["derive"], optional = true }
dialoguer = { version = "0.11", optional = true }
console = { version = "0.15", optional = true }

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "eq"
path = "src/bin/eq.rs"
required-features = ["cli"]

[features]
cli = ["dep:clap", "dep:dialoguer", "dep:console"]
